Added git page config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/aadilminhaz/aadil-react-portfolio.git",
+  "homepage": "https://github.com/aadilminhaz/aadil-react-portfolio",
   "name": "aadil-react-portfolio",
   "private": true,
   "version": "0.0.0",
